Add business entities controller
